# blog

./: .gitignore  .site.hs.swo  .site.hs.swp  README.md  blog.cabal  contact.markdown  index.html  keybase.txt  site.REMOVED.git-id  site.hi  site.hs
.github/workflows/: main.yml
code-examples/fold-iso/: LICENSE.md  README.md  index.js  package.json  testutf8.txt
css/: apollo.css
drafts/: 2015-02-20-folding-vs-iconv.markdown  2016-02-20-folding-vs-iconv.markdown
images/: logo.psd  manifest.json
posts/: .2015-02-15-on-reversing-strings.markdown.swp  2015-02-15-on-reversing-strings.markdown  2016-02-15-on-reversing-strings.markdown  2016-02-20-folding-vs-iconv.markdown  2016-05-25-typesafe-sql-at-haskellerz.markdown  2016-05-26-happy-haskell-scala-development-in-nvim.markdown  2016-07-01-nowhere-near-the-mouse.markdown  2016-08-16-bonlang-experimenting-languages.markdown  2016-12-20-purescript-malaga-surfing.markdown  2017-06-17-shitposting-en-espanol.markdown  2017-07-28-learning-to-love-nix.markdown  2017-10-29-lambdaworld-andalusia-australia.markdown  2018-03-28-one-year-common-lisp-developer-part-1-the-good.md  2018-03-28-one-year-common-lisp-developer-part-2-the-bad.md  2022-08-21-wtf-signing-commits.md
templates/: .favicons-head.html.swp  archive.html  default.html  favicons-head.html  post-list.html  post.html
